--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,4 +9,5 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "sqlmodel>=0.0.27",
     "uvicorn[standard]>=0.38.0",
+    "psycopg2-binary>=2.9.9",
 ]
