fix: yamlファイル修正

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
   - type: web
     name: gpu-reservation-backend
+    rootDir: backend
     env: python
     buildCommand: |
       pip install uv
